k8s/base/api-gateway/security-policy-analytics.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-policy-analytics
  namespace: platform
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: analytics-routes
  jwt:
    providers:
      - name: platform-auth
        issuer: https://auth.platform.local
        audiences: ["api"]
        remoteJWKS:
          url: https://auth.platform.svc.cluster.local:9092/.well-known/jwks.json
        claims:
          - name: tid
            required: true
